[gd_scene load_steps=4 format=3 uid="uid://d2puo204y0gqx"]

[ext_resource type="Script" path="res://Scenes/Components/TextField/text_field.gd" id="1_cj1ig"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k73xe"]
content_margin_left = 10.0
content_margin_right = 20.0
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hnt1q"]
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[node name="TextField" type="Control"]
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 0.0709877
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_cj1ig")
metadata/FieldTitle = ""
metadata/_edit_use_anchors_ = true
metadata/type = ""
metadata/Prefix = ""

[node name="content" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 38.0
grow_horizontal = 2
size_flags_vertical = 3

[node name="title_container" type="PanelContainer" parent="content"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_k73xe")

[node name="title" type="Label" parent="content/title_container"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Default"
vertical_alignment = 1

[node name="input_container" type="PanelContainer" parent="content"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_hnt1q")

[node name="LineEdit" type="LineEdit" parent="content/input_container"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
placeholder_text = "Entrez un nombre"
max_length = 10
flat = true

[node name="price_container" type="MarginContainer" parent="content"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="price" type="Label" parent="content/price_container"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "0â‚¬"

[connection signal="text_changed" from="content/input_container/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_submitted" from="content/input_container/LineEdit" to="." method="_on_line_edit_text_submitted"]
